# PhD

TauFitter/: CMakeLists.txt  main.cpp
TauFitter/frameworks/Minuit2-5.34.14/: Makefile  config.status  libtool
TauFitter/frameworks/Minuit2-5.34.14/doc/: Makefile
TauFitter/frameworks/Minuit2-5.34.14/inc/: Makefile
TauFitter/frameworks/Minuit2-5.34.14/inc/Math/: Makefile
TauFitter/frameworks/Minuit2-5.34.14/inc/Minuit2/: Makefile
TauFitter/frameworks/Minuit2-5.34.14/src/: Makefile
TauFitter/frameworks/Minuit2-5.34.14/src/.deps/: AnalyticalGradientCalculator.Plo  BasicMinimumError.Plo  CombinedMinimumBuilder.Plo  DavidonErrorUpdator.Plo  FumiliBuilder.Plo  FumiliErrorUpdator.Plo  FumiliGradientCalculator.Plo  FumiliMinimizer.Plo  FumiliStandardChi2FCN.Plo  FumiliStandardMaximumLikelihoodFCN.Plo  GenAlgoOptions.Plo  HessianGradientCalculator.Plo  InitialGradientCalculator.Plo  LaEigenValues.Plo  LaInnerProduct.Plo  LaInverse.Plo  LaOuterProduct.Plo  LaSumOfElements.Plo  LaVtMVSimilarity.Plo  MPIProcess.Plo  MinimizerOptions.Plo  Minuit2Minimizer.Plo  MnApplication.Plo  MnContours.Plo  MnCovarianceSqueeze.Plo  MnEigen.Plo  MnFcn.Plo  MnFumiliMinimize.Plo  MnFunctionCross.Plo  MnGlobalCorrelationCoeff.Plo  MnHesse.Plo  MnLineSearch.Plo  MnMachinePrecision.Plo  MnMinos.Plo  MnParabolaFactory.Plo  MnParameterScan.Plo  MnPlot.Plo  MnPosDef.Plo  MnPrint.Plo  MnScan.Plo  (+25 more)
TauFitter/frameworks/Minuit2-5.34.14/src/.libs/: libMinuit2.0.dylib
TauFitter/frameworks/Minuit2-5.34.14/test/: Makefile
TauFitter/frameworks/Minuit2-5.34.14/test/MnSim/: Makefile  test_Minuit2_DemoFumili  test_Minuit2_DemoGaussSim  test_Minuit2_DemoMinimizer  test_Minuit2_Parallel  test_Minuit2_PaulTest  test_Minuit2_PaulTest2  test_Minuit2_PaulTest3  test_Minuit2_PaulTest4  test_Minuit2_ReneTest
TauFitter/frameworks/Minuit2-5.34.14/test/MnSim/.deps/: DemoFumili.Po  DemoGaussSim.Po  GaussDataGen.Po  GaussFcn.Po  GaussFcn2.Po  ParallelTest.Po  PaulTest.Po  PaulTest2.Po  PaulTest3.Po  PaulTest4.Po  ReneTest.Po  demoMinimizer.Po
TauFitter/frameworks/Minuit2-5.34.14/test/MnSim/.libs/: test_Minuit2_DemoFumili  test_Minuit2_DemoGaussSim  test_Minuit2_DemoMinimizer  test_Minuit2_Parallel  test_Minuit2_PaulTest  test_Minuit2_PaulTest2  test_Minuit2_PaulTest3  test_Minuit2_PaulTest4  test_Minuit2_ReneTest
TauFitter/frameworks/Minuit2-5.34.14/test/MnTutorial/: Makefile  test_Minuit2_Quad12FMain  test_Minuit2_Quad1FMain  test_Minuit2_Quad4FMain  test_Minuit2_Quad8FMain
TauFitter/generatedFiles/: data.tsv
TauFitter/program/: AdlerFunction.cpp  AdlerFunction.h  CMakeLists.txt  Chisquared.cpp  Chisquared.h  Constants.cpp  Constants.h  IntegralMomentum.cpp  IntegralMomentum.h  NumericalMethods.cpp  NumericalMethods.h  RunAlpha.cpp  RunAlpha.h  Theory.cpp  Theory.h
TauFitter/program/Minuit2/: RosenBrockFCN.h
TauFitter/program/experimentalData/: ExperimentalData.cpp  ExperimentalData.h  plot.gp
TauFitter/program_test/: CMakeLists.txt
TauFitter/program_test/basic_tests/: AdlerFunctionFixture.cpp  AdlerFunction_check.cpp.cpp  CMakeLists.txt  ConstantsFixture.cpp  ExperimentalData.cpp  NumericalMethodsFixture.cpp  RunAlphaFixture.cpp  numericalMethods_check.cpp  runAlpha_check.cpp
(+47 files in other folders)
